* 2013-05-14 - marcus.klein@open-xchange.com

 - Fix for bug 26170: Renamed App Suite calendar printing templates again according to the required naming scheme.

* 2013-05-14 - thorben.betten@open-xchange.com

 - Fix for bug 26501: Return an empty JSON object to indicate successful delete operation
 - Fix for bug 26565: Check for possible null message while logging
 - Fix for bug 26577: Iterate over a snapshot, not the (possibly concurrently modified) collection itself
 - Fix for bug 26317: Treat "text/comma-separated-values" part like a binary one

* 2013-05-13 - dennis.sieben@open-xchange.com

 - Fix for bug 26545: Changed from getJSONArray to optJSONArray to avoid exception

* 2013-05-13 - martin.herfurth@open-xchange.com

 - Fix for bug 26207: Full DateTime for Due Date of Tasks on ical creation.

* 2013-05-13 - thorben.betten@open-xchange.com

 - Fix for bug 26473: Orderly detect "Folder not found" error message when trying to resolve a "local" image by a URL

* 2013-05-09 - thorben.betten@open-xchange.com

 - Fix for bug 26456: Accept flag parameters (without a parameter value)
 - Fix for bug 26385: Try to determine ICal part's MIME type by file name if not appropriate
 - Fix for bug 26314: Propagate an absent/non-existing folder through event framework to notify USM module, too

* 2013-05-08 - marc.arens@open-xchange.com

 - Fix for bug 26335: Only wait for a request body if headers indicate a body

* 2013-05-08 - thorben.betten@open-xchange.com

 - Fix for bug 26464: Avoid buffer overflow through interpreting infinite locking as locked for 10 years

* 2013-05-07 - martin.herfurth@open-xchange.com

 - Fix for bug 26400: TimeZone Parameter for ITIP analyze call had impact on the object itself.
 - Fix for bug 26418: Shared folder id in notification mail headers.

* 2013-05-07 - marcus.klein@open-xchange.com

 - Fix for bug 26354: Using the same row locks for all methods modifying the user attributes to avoid deadlocks.
